--- a/docs/styles.css
+++ b/docs/styles.css
@@ -152,7 +152,7 @@ section.game_description,section.team{
   background: rgb(212, 76, 22);
   color: whitesmoke;
   font-size: 18px;
-  margin: 20px;
+  margin:  20px;
   margin-bottom: 0%;
   padding: 20px;
 }
@@ -174,6 +174,22 @@ section div.videos{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+}
+
+@media screen and (min-width: 958px){
+  section.game_description,section.team{
+    margin:  20px 200px;
+    margin-bottom: 0%;
+  }
+
+  section h1.video_title{
+    margin: 0% 200px;
+  }
+
+  section div.videos{
+    margin: 200px;
+    margin-top:0%;
+  }
 }
 
 section div.videos figure {
